[package]
name = "pbft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    libp2p = { version = "0.50", features = ["tcp", "dns", "async-std", "noise", "mplex", "yamux", "websocket", "macros", "mdns", "gossipsub", "request-response"]}
    futures = "0.3.27"
    async-std = { version = "1.12.0", features = ["attributes"] }
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
http = "0.2.9"
sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-async-std", "mysql" ] }
actix-rt = "2.8.0"

